# ai-multi-agent-app

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml
src/multi_agent_app/: cli.py  settings.py  streamlit_app.py
src/multi_agent_app/api/: deps.py  main.py
src/multi_agent_app/api/routes/: chat.py  chat_sse.py
src/multi_agent_app/core/: db.py  graph_factory.py  invoice_subagent.py  memory.py  models.py  music_subagent.py  supervisor.py  tools.py
