[tool.poetry]
name = "multi-agent-app"
version = "0.1.0"
description = ""
authors = ["ygonzalez <ygonzalez704@gmail.com>"]
readme = "README.md"

packages = [
  { include = "multi_agent_app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.25"
langgraph = "^0.4.8"
langchain-openai = "^0.3.21"
langsmith = "^0.3.45"
streamlit = "^1.45.1"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.41"
requests = "^2.32.3"
pydantic = "^2.11.5"
uvicorn = "0.32.1"
fastapi = "^0.115.12"
langchain-community = "^0.3.24"
pydantic-settings = "^2.9.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.13"
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
